--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.4.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0"
   },
