--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.3",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "sonner": "^1.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
