--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "framer-motion": "^12.0.1",
     "lucide-react": "^0.473.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
     "sonner": "^1.7.2"
