--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
     "reselect": "^5.1.1",
-    "sonner": "^1.7.2"
+    "sonner": "^1.7.2",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
